--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <body>
         <main>
             <div id="container">
-                <h1> Calculadora <br> JavaScript </h1>
+                <div id="titulo">
+                    <h1> Calculadora <br> JavaScript </h1>
+                </div>
                 <div id="menu">
                     <input class="botaoMenu" type="button" value="Primo" onclick="primar()">
                     <input class="botaoMenu" type="button" value="Par/Impar" onclick="parImparar()">
@@ -22,8 +24,10 @@
                 <div id="quadrado"></div>
                 <input type="number" name="Valor" id="input1">
                 <input type="number" name="Valor" id="input2">
-                <button id="mostraResult">
-                <div id="result"></div>
+                <button id="resultButt"> Resultado </button>
+                <div id="result">
+                    <p id="resultText"></p>
+                </div>
             </div>
         </main>
     </body>
