Tá ficando bonito

--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
                     <input class="botaoMenu" type="button" value="Par/Impar" onclick="parImparar()">
                     <input class="botaoMenu" type="button" value="Fatorial" onclick="fatorialar()">
                     <input class="botaoMenu" type="button" value="Quadrado" onclick="quadradar()">
+                    <input class="botaoMenu" type="button" value="?????" onclick="">
+                    <input class="botaoMenu" type="button" value="Bhaskara" onclick="bhaskarar()">
                 </div>  
                 <div id="primo"></div>
                 <div id="parimpar"></div>
                 <div id="fatorial"></div>
                 <div id="quadrado"></div>
-                <input type="number" name="Valor" id="input1">
+                <div id="????"></div>
+                <div id="bhaskara"></div>
+                <label id="a"><input type="number" name="Valor" id="input1"></label>
                 <input type="number" name="Valor" id="input2">
+                <input type="number" name="Valor" id="input3">
                 <button id="resultButt"> Resultado </button>
                 <div id="result">
                     <p id="resultText"></p>
