enter, correções, area do circulo, ajuste tamanhos

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                     <input class="botaoMenu" type="button" value="Par/Impar" onclick="parImparar()">
                     <input class="botaoMenu" type="button" value="Fatorial" onclick="fatorialar()">
                     <input class="botaoMenu" type="button" value="Quadrado" onclick="quadradar()">
-                    <input class="botaoMenu" type="button" value="?????" onclick="">
+                    <input class="botaoMenu" type="button" value="Área Circ." onclick="areaCircular()">
                     <input class="botaoMenu" type="button" value="Bhaskara" onclick="bhaskarar()">
                 </div>  
                 <div id="primo"></div>
                 <div id="parimpar"></div>
                 <div id="fatorial"></div>
                 <div id="quadrado"></div>
-                <div id="????"></div>
+                <div id="areacirculo"></div>
                 <div id="bhaskara"></div>
                 <label id="a"><input type="number" name="Valor" id="input1"></label>
                 <input type="number" name="Valor" id="input2">
