Mudança nas cores, créditos, alguns ajustes

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
                     <p id="resultText"></p>
                 </div>
             </div>
+            <div id="border">
+                <div id="credits">
+                    <b>Criado por: </b>
+                    <br>
+                    Pedro Samuel 
+                    <br>
+                    Otavio Schimith
+                    <br>
+                    Wesley Dircney
+                </div>
+            </div>
         </main>
     </body>
 </html>
