--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                     <input class="botaoMenu" type="button" value="Quadrado" onclick="quadradar()">
                     <input class="botaoMenu" type="button" value="Área Circ." onclick="areaCircular()">
                     <input class="botaoMenu" type="button" value="Bhaskara" onclick="bhaskarar()">
+                    <input class="botaoMenu" type="button" value="Hipotenusa" onclick="hipotenusar()">
+                    <input class="botaoMenu" type="button" value="V. Media" onclick="vmediar()">
                 </div>  
                 <div id="primo"></div>
                 <div id="parimpar"></div>
@@ -26,6 +28,8 @@
                 <div id="quadrado"></div>
                 <div id="areacirculo"></div>
                 <div id="bhaskara"></div>
+                <div id="hipotenusa"></div>
+                <div id="vmedia"></div>
                 <label id="a"><input type="number" name="Valor" id="input1"></label>
                 <input type="number" name="Valor" id="input2">
                 <input type="number" name="Valor" id="input3">
@@ -42,7 +46,7 @@
                     <br>
                     Otavio Schimith
                     <br>
-                    Wesley Dircney
+                    Wesley Dirciney
                 </div>
             </div>
         </main>
