--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="index.css">
         <script src="index.js" defer></script>
-        <title>Calculos legais</title>
+        <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/4341/4341087.png" type="image/x-icon">
+        <title>Calculadora - PWA</title>
     </head>
     <body>
         <main>
